tooling/nargo_cli/tests/snapshots/execution_success/regression_8212/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: i8) {
    assert((x as i16) == -1);
}
