tooling/nargo_cli/tests/snapshots/execution_success/regression_8212/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:8 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 128 ], EXPR [ 256 ]], outputs: [_1, _2]",
    "BLACKBOX::RANGE [_1]:1 bits []",
    "BLACKBOX::RANGE [_2]:8 bits []",
    "EXPR [ (1, _0) (-256, _1) (-1, _2) 128 ]",
    "EXPR [ (1, _0) (65280, _1) -65535 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "lZDBDoMgDIbfpWcPKnoYr7IsBrEaEgKkwpLF+O6rRDc97LBLS/v3o+m/wIB9mjrjRj+DvC/Qk7HWTJ31WkXjHXeXtYCj7CIhcgtOOlNBEboI0iVrC3gqm/LQHJTLOSpitSwA3cCZPxyNxe21Fl+6/I2KamfF7QO3/9ONuNAPrpQ2dLkWKpA8X+cocmxybEHW67aEjOot7s6MyemTUfEVDuWwMpDXOCTCbU3WePEb",
  "file_map": {
    "50": {
      "source": "fn main(x: i8) {\n    assert_eq(x as i16, -1);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
